fixed bug where save panel was showing a bit on the right when it should be offscreen

--- a/HTML5/EaselJS/FollowMultiTouch/styles/styles.css
+++ b/HTML5/EaselJS/FollowMultiTouch/styles/styles.css
@@ -208,10 +208,10 @@ img
 
 #savePanel
 {
-	position:fixed;
+	position:absolute;
 	
 	top:30%;
-	right:-320px;
+	right:-340px;
 	
 	text-align:center;
 	
